# ceph-document-kb

./: .gitignore  BOB_INTEGRATION_GUIDE.md  DEVELOPMENT.md  README.md  SPEC.md  USER_GUIDE.html  config.yaml  index_docs.py  pyproject.toml
.cursor/rules/: doc-lookup.mdc
examples/: agent_integration.py
src/ceph_doc_kb/: __init__.py  constants.py  models.py
src/ceph_doc_kb/indexer/: __init__.py  builder.py  code_extractor.py  embedder.py  incremental.py  parser.py  scorer.py  xref.py
src/ceph_doc_kb/search/: __init__.py  keyword_search.py  router.py  semantic_search.py
src/ceph_doc_kb/server/: __init__.py  mcp_server.py  rest_api.py
tests/: test_code_extractor.py  test_mcp_server.py  test_parser.py  test_scorer.py  test_search.py
tests/fixtures/: cephadm_install.rst  rados_pools.rst  rbd_mirroring.rst
vscode-extension/: README.md  extension.js  package.json
